--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,44 @@
 .theme-dark {
+  --ttv-theme-dark-font-color: #fff;
   --ttv-theme-dark-bg-color: rgb(24, 24, 27);
   --ttv-theme-dark-button-bg-color: rgb(145, 71, 255);
   --ttv-theme-dark-button-bg-color-hover: rgb(119, 44, 232);
 }
 
 body {
+  --font-size: 1.3rem;
+  --popup-gap: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: Arial, sans-serif;
+  font-size: var(--font-size);
+  color: var(--ttv-theme-dark-font-color);
   font-weight: 600;
   margin: 0;
-  padding: 20px;
-  background-color: rgb(24, 24, 27);
+  padding: 1.25rem;
+  background-color: var(--ttv-theme-dark-bg-color);
 }
 
 h1 {
   color: #eee;
 }
 p {
-  color: #fff;
-  text-align: justify;
-  max-width: 400px;
+  text-align: center;
+  max-width: 15rem;
 }
 .button-container {
   display: flex;
-  gap: 10px;
-  margin-top: 20px;
+  gap: 0.675rem;
+  margin-top: 1.25rem;
+  flex-direction: column;
 }
 button {
-  padding: 10px 20px;
+  padding: 0.675rem 1.25rem;
   font-size: 1.3rem;
   font-weight: 600;
-  color: #fff;
+  color: var(--ttv-theme-dark-font-color);
   background-color: var(--ttv-theme-dark-button-bg-color);
   border: none;
   border-radius: 5px;
